--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,6 +1,6 @@
 @software{gast2025differential,
   author       = {Gast, Ryan D.},
-  title        = {differential-equations: A high-performance library for solving differential equations in Rust},
+  title        = {differential-equations: A high-performance library for numerically solving differential equations in Rust},
   year         = {2025},
   publisher    = {GitHub},
   journal      = {GitHub repository},
